--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
   <meta property="og:title" content="Administração no IFTO — Paraíso do Tocantins" />
   <meta property="og:description" content="Formação presencial, metodologias ativas e vivência prática. Cadastre-se para receber novidades do Vestibular 2026." />
   <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#0A66C2" />
 
-  <!-- Cor do tema no mobile -->
-  <meta name="theme-color" content="#0b5d4d" />
+  <!-- Tipografia: Manrope (títulos) + Inter (corpo) -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Manrope:wght@700;800&display=swap" rel="stylesheet" />
 
   <link rel="preload" href="styles.css" as="style" />
   <link rel="stylesheet" href="styles.css" />
+
   <noscript>
     <style>
       .js-only { display: none !important; }
@@ -26,10 +30,13 @@
 <body>
   <a class="skip-link" href="#conteudo-principal">Pular para o conteúdo</a>
 
+  <!-- Backdrop para navegação mobile -->
+  <div id="backdrop" class="backdrop" hidden></div>
+
   <header class="site-header" role="banner">
     <div class="container header-wrap">
       <div class="brand" aria-label="IFTO Administração">
-        <span class="brand-mark" aria-hidden="true">IFTO</span>
+        <span class="brand-mark" aria-hidden="true">IF</span>
         <span class="brand-text">Administração — Campus Paraíso do Tocantins</span>
       </div>
 
@@ -43,17 +50,22 @@
 
         <ul id="menu-principal" class="nav-list">
           <li><a href="#porque">Por que o curso?</a></li>
-          <li><a href="#competencias">O que você desenvolve</a></li>
+          <li><a href="#competencias">Competências</a></li>
           <li><a href="#vida-campus">Vida no Campus</a></li>
           <li><a href="#processo">Processo Seletivo</a></li>
-          <li><a href="#inscricao" class="btn btn-small">Quero receber novidades</a></li>
+          <li><a href="#inscricao" class="btn btn-small btn-secondary">Quero receber novidades</a></li>
         </ul>
       </nav>
     </div>
 
+    <!-- Hero com overlay e “onda de impacto” -->
     <section class="hero" id="topo" aria-label="Chamada principal">
+      <div class="hero-bg" aria-hidden="true">
+        <!-- Ornamento “ondas de impacto” criado via CSS -->
+      </div>
       <div class="container hero-content">
-        <h1>Administração no IFTO — Paraíso do Tocantins: profissionais para transformar realidades</h1>
+        <p class="kicker">Graduação em Administração</p>
+        <h1>Profissionais para transformar realidades</h1>
         <p class="subtitle">
           Formação presencial, metodologias ativas e vivência prática.
           Cadastre-se para receber em primeira mão as novidades do Vestibular 2026.
@@ -67,6 +79,14 @@
   </header>
 
   <main id="conteudo-principal" tabindex="-1">
+    <!-- Barra de prova social (opcional) -->
+    <section class="section slim trustbar" aria-label="Prova social">
+      <div class="container trustbar-wrap">
+        <span class="trust-hint">Integração com a comunidade e projetos</span>
+        <div class="trust-dots" aria-hidden="true"></div>
+      </div>
+    </section>
+
     <!-- Por que o curso -->
     <section id="porque" class="section">
       <div class="container grid-two">
@@ -79,9 +99,9 @@
             <li>Docentes qualificados e infraestrutura acadêmica do IFTO.</li>
           </ul>
         </div>
-        <aside class="card note" aria-label="Informações rápidas">
+        <aside class="card note" aria-label="Informações em destaque">
           <h3>Em destaque</h3>
-          <p>Ambiente acadêmico com foco no desenvolvimento regional e integração com a comunidade.</p>
+          <p>Ambiente acolhedor com foco no desenvolvimento regional e integração com a comunidade.</p>
         </aside>
       </div>
     </section>
@@ -89,23 +109,30 @@
     <!-- O que você desenvolve -->
     <section id="competencias" class="section alt">
       <div class="container">
-        <h2>O que você desenvolve</h2>
+        <div class="section-head">
+          <span class="micro">Competências-chave</span>
+          <h2>O que você desenvolve</h2>
+        </div>
         <div class="features">
           <article class="feature">
+            <div class="feature-icon" aria-hidden="true"></div>
             <h3>Gestão estratégica e operacional</h3>
-            <p>Capacidade de planejar, executar e monitorar processos organizacionais com visão sistêmica.</p>
+            <p>Planejar, executar e monitorar processos com visão sistêmica.</p>
           </article>
           <article class="feature">
-            <h3>Análise de problemas e tomada de decisão</h3>
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Análise e decisão</h3>
             <p>Uso de métodos e dados para resolver desafios reais com eficiência.</p>
           </article>
           <article class="feature">
-            <h3>Comunicação, liderança e trabalho em equipe</h3>
-            <p>Habilidades interpessoais aplicadas a contextos profissionais e projetos.</p>
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Comunicação e liderança</h3>
+            <p>Habilidades interpessoais aplicadas em equipes e projetos.</p>
           </article>
           <article class="feature">
-            <h3>Visão ética, cidadã e orientada a resultados</h3>
-            <p>Postura responsável, comprometida com impacto positivo e desempenho.</p>
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Ética e resultados</h3>
+            <p>Postura responsável, cidadã e orientada a impacto positivo.</p>
           </article>
         </div>
       </div>
@@ -117,32 +144,32 @@
         <div>
           <h2>Vida no Campus Paraíso</h2>
           <ul class="bullets">
-            <li>Ambiente acolhedor e focado no desenvolvimento regional</li>
-            <li>Ações de extensão e eventos acadêmicos (ex.: SEMAD, Imersão Empreendedora)</li>
-            <li>Oportunidades de integração com a comunidade e projetos</li>
+            <li>Ambiente acolhedor e focado no desenvolvimento regional.</li>
+            <li>Ações de extensão e eventos acadêmicos (ex.: SEMAD, Imersão Empreendedora).</li>
+            <li>Oportunidades de integração com a comunidade e projetos.</li>
           </ul>
         </div>
-        <aside class="card">
-          <h3>Prova social</h3>
-          <p>Inclua depoimentos de estudantes/egressos, premiações e projetos locais quando disponíveis.</p>
+        <aside class="card card-media">
+          <div class="media-placeholder" role="img" aria-label="Ambiente acadêmico do campus"></div>
+          <p class="media-caption">Imersões e projetos conectados à realidade local.</p>
         </aside>
       </div>
     </section>
 
-    <!-- Processo seletivo -->
+    <!-- Processo seletivo (linha do tempo) -->
     <section id="processo" class="section alt">
       <div class="container">
         <h2>Como funciona o processo seletivo?</h2>
-        <div class="process-grid">
-          <div class="process-step">
-            <div class="step-number" aria-hidden="true">1</div>
-            <p>As inscrições atuais estão encerradas.</p>
-          </div>
-          <div class="process-step">
-            <div class="step-number" aria-hidden="true">2</div>
-            <p>Cadastre-se para receber o edital e prazos do Vestibular 2026 assim que forem publicados.</p>
-          </div>
-        </div>
+        <ol class="timeline" aria-label="Etapas do processo seletivo">
+          <li class="timeline-item">
+            <div class="dot" aria-hidden="true"></div>
+            <p><strong>Inscrições encerradas</strong> no momento.</p>
+          </li>
+          <li class="timeline-item">
+            <div class="dot" aria-hidden="true"></div>
+            <p>Cadastre-se para receber o edital e prazos do <strong>Vestibular 2026</strong> assim que forem publicados.</p>
+          </li>
+        </ol>
       </div>
     </section>
 
@@ -152,7 +179,7 @@
         <h2 id="titulo-form">Cadastre-se para receber novidades do Vestibular 2026</h2>
 
         <form id="lead-form" novalidate>
-          <!-- Honeypot anti-spam (oculto para usuários) -->
+          <!-- Honeypot anti-spam (oculto) -->
           <div class="hp-field" aria-hidden="true">
             <label for="website">Não preencha este campo</label>
             <input type="text" id="website" name="website" tabindex="-1" autocomplete="off" />
@@ -210,7 +237,7 @@
           </label>
           <small class="error" id="erro-lgpd" role="alert" aria-live="polite"></small>
 
-          <!-- Campos ocultos para UTMs e mensuração -->
+          <!-- UTMs e mensuração -->
           <input type="hidden" id="utm_source" name="utm_source" />
           <input type="hidden" id="utm_medium" name="utm_medium" />
           <input type="hidden" id="utm_campaign" name="utm_campaign" />
@@ -230,34 +257,44 @@
       </div>
     </section>
 
-    <!-- FAQ -->
+    <!-- FAQ aprimorado -->
     <section id="faq" class="section">
       <div class="container">
         <h2>Perguntas frequentes (FAQ)</h2>
 
         <details class="faq-item">
-          <summary>O curso é presencial?</summary>
-          <p>Sim, com parte da carga em ambiente virtual.</p>
+          <summary><span class="faq-title">O curso é presencial?</span></summary>
+          <div class="faq-body">
+            <p>Sim, com parte da carga em ambiente virtual.</p>
+          </div>
         </details>
 
         <details class="faq-item">
-          <summary>Quanto tempo dura?</summary>
-          <p>Mínimo 8 semestres e máximo 16.</p>
+          <summary><span class="faq-title">Quanto tempo dura?</span></summary>
+          <div class="faq-body">
+            <p>Mínimo 8 semestres e máximo 16.</p>
+          </div>
         </details>
 
         <details class="faq-item">
-          <summary>Tem estágio e TCC?</summary>
-          <p>Sim, ambos obrigatórios.</p>
+          <summary><span class="faq-title">Tem estágio e TCC?</span></summary>
+          <div class="faq-body">
+            <p>Sim, ambos obrigatórios.</p>
+          </div>
         </details>
 
         <details class="faq-item">
-          <summary>Quais são as vagas?</summary>
-          <p>Previsão de 40 vagas para 2026 (sujeito a editais).</p>
+          <summary><span class="faq-title">Quais são as vagas?</span></summary>
+          <div class="faq-body">
+            <p>Previsão de 40 vagas para 2026 (sujeito a editais).</p>
+          </div>
         </details>
 
         <details class="faq-item">
-          <summary>Quando abrem as inscrições?</summary>
-          <p>Divulgaremos por e-mail e redes assim que sair o edital.</p>
+          <summary><span class="faq-title">Quando abrem as inscrições?</span></summary>
+          <div class="faq-body">
+            <p>Divulgaremos por e-mail e redes assim que sair o edital.</p>
+          </div>
         </details>
       </div>
     </section>
