--- a/index.html
+++ b/index.html
@@ -1,28 +1,384 @@
-<header class="site-header" role="banner">
-  <div class="container header-wrap">
-    <div class="brand" aria-label="Impacto Adm">
-      <!-- LOGO Impacto Adm no cabeçalho -->
-      <img src="assets/img/original.png" alt="Impacto Adm" class="brand-logo" width="160" height="auto" decoding="async" loading="eager" />
-      <span class="brand-text">Administração — Campus Paraíso do Tocantins</span>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Administração IFTO Paraíso | Vestibular 2026 — Cadastre-se</title>
+  <meta name="description" content="Graduação em Administração do IFTO (Campus Paraíso): presencial, metodologias ativas, estágio e TCC. Receba datas e novidades do Vestibular 2026." />
+
+  <!-- Open Graph básico -->
+  <meta property="og:title" content="Administração no IFTO — Paraíso do Tocantins" />
+  <meta property="og:description" content="Formação presencial, metodologias ativas e vivência prática. Cadastre-se para receber novidades do Vestibular 2026." />
+  <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#0A66C2" />
+
+  <!-- Tipografia: Manrope (títulos) + Inter (corpo) -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Manrope:wght@700;800&display=swap" rel="stylesheet" />
+
+  <!-- CSS principal (com versão para evitar cache) -->
+  <link rel="stylesheet" href="styles.css?v=1.0.2" />
+
+  <noscript>
+    <style>.js-only { display: none !important; }</style>
+  </noscript>
+</head>
+<body>
+  <a class="skip-link" href="#conteudo-principal">Pular para o conteúdo</a>
+
+  <!-- Backdrop para navegação mobile -->
+  <div id="backdrop" class="backdrop" hidden></div>
+
+  <header class="site-header" role="banner">
+    <div class="container header-wrap">
+      <div class="brand" aria-label="IFTO Administração">
+        <span class="brand-mark" aria-hidden="true">IF</span>
+        <span class="brand-text">Administração — Campus Paraíso do Tocantins</span>
+      </div>
+
+      <nav class="site-nav" aria-label="Navegação principal">
+        <button class="nav-toggle js-only" aria-expanded="false" aria-controls="menu-principal">
+          <span class="nav-toggle-bar" aria-hidden="true"></span>
+          <span class="nav-toggle-bar" aria-hidden="true"></span>
+          <span class="nav-toggle-bar" aria-hidden="true"></span>
+          <span class="nav-toggle-text">Menu</span>
+        </button>
+
+        <ul id="menu-principal" class="nav-list">
+          <li><a href="#porque">Por que o curso?</a></li>
+          <li><a href="#competencias">Competências</a></li>
+          <li><a href="#vida-campus">Vida no Campus</a></li>
+          <li><a href="#processo">Processo Seletivo</a></li>
+          <li><a href="#inscricao" class="btn btn-small btn-secondary" data-track="cta_menu">Quero receber novidades</a></li>
+        </ul>
+      </nav>
     </div>
 
-    <nav class="site-nav" aria-label="Navegação principal">
-      <button class="nav-toggle js-only" aria-expanded="false" aria-controls="menu-principal">
-        <span class="nav-toggle-bar" aria-hidden="true"></span>
-        <span class="nav-toggle-bar" aria-hidden="true"></span>
-        <span class="nav-toggle-bar" aria-hidden="true"></span>
-        <span class="nav-toggle-text">Menu</span>
-      </button>
+    <!-- Hero com overlay e imagem responsiva -->
+    <section class="hero" id="topo" aria-label="Chamada principal">
+      <div class="hero-bg" aria-hidden="true"></div>
 
-      <ul id="menu-principal" class="nav-list">
-        <li><a href="#porque">Por que o curso?</a></li>
-        <li><a href="#competencias">Competências</a></li>
-        <li><a href="#vida-campus">Vida no Campus</a></li>
-        <li><a href="#processo">Processo Seletivo</a></li>
-        <!-- Botão do menu com contraste corrigido -->
-        <li><a href="#inscricao" class="btn btn-small btn-secondary">Quero receber novidades</a></li>
-      </ul>
-    </nav>
-  </div>
-  ...
-</header>
+      <picture class="hero-media" aria-hidden="true">
+        <!-- Mobile primeiro -->
+        <source srcset="assets/img/hero-mobile.jpg" media="(max-width: 640px)">
+        <!-- Desktop -->
+        <img src="assets/img/hero-desktop.jpg" alt="" loading="eager" decoding="async">
+      </picture>
+
+      <div class="container hero-content">
+        <p class="kicker">Graduação em Administração</p>
+        <h1>Profissionais para transformar realidades</h1>
+        <p class="subtitle">
+          Formação presencial, metodologias ativas e vivência prática.
+          Cadastre-se para receber em primeira mão as novidades do Vestibular 2026.
+        </p>
+        <div class="hero-ctas">
+          <a class="btn btn-primary" href="#inscricao" data-track="cta_hero">Quero receber novidades do Vestibular 2026</a>
+          <a class="btn btn-ghost" href="#porque" data-track="cta_saiba_mais">Saiba mais</a>
+        </div>
+      </div>
+    </section>
+  </header>
+
+  <main id="conteudo-principal" tabindex="-1">
+    <!-- Barra de prova social (texto sutil) -->
+    <section class="section slim trustbar" aria-label="Prova social">
+      <div class="container trustbar-wrap">
+        <span class="trust-hint">Integração com a comunidade e projetos</span>
+        <div class="trust-dots" aria-hidden="true"></div>
+      </div>
+    </section>
+
+    <!-- Por que o curso -->
+    <section id="porque" class="section">
+      <div class="container grid-two">
+        <div>
+          <h2>Por que o curso do IFTO?</h2>
+          <ul class="checklist">
+            <li>Formação completa: sala de aula + projetos + extensão + estágio + TCC.</li>
+            <li>Metodologias ativas e uso de tecnologias (Moodle).</li>
+            <li>Imersão Empreendedora: prática guiada para tirar ideias do papel.</li>
+            <li>Docentes qualificados e infraestrutura acadêmica do IFTO.</li>
+          </ul>
+        </div>
+        <aside class="card note" aria-label="Informações em destaque">
+          <h3>Em destaque</h3>
+          <p>Ambiente acolhedor com foco no desenvolvimento regional e integração com a comunidade.</p>
+        </aside>
+      </div>
+    </section>
+
+    <!-- O que você desenvolve -->
+    <section id="competencias" class="section alt">
+      <div class="container">
+        <div class="section-head">
+          <span class="micro">Competências-chave</span>
+          <h2>O que você desenvolve</h2>
+        </div>
+        <div class="features">
+          <article class="feature">
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Gestão estratégica e operacional</h3>
+            <p>Planejar, executar e monitorar processos com visão sistêmica.</p>
+          </article>
+          <article class="feature">
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Análise e decisão</h3>
+            <p>Uso de métodos e dados para resolver desafios reais com eficiência.</p>
+          </article>
+          <article class="feature">
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Comunicação e liderança</h3>
+            <p>Habilidades interpessoais aplicadas em equipes e projetos.</p>
+          </article>
+          <article class="feature">
+            <div class="feature-icon" aria-hidden="true"></div>
+            <h3>Ética e resultados</h3>
+            <p>Postura responsável, cidadã e orientada a impacto positivo.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Vida no Campus -->
+    <section id="vida-campus" class="section">
+      <div class="container grid-two">
+        <div>
+          <h2>Vida no Campus Paraíso</h2>
+          <ul class="bullets">
+            <li>Ambiente acolhedor e focado no desenvolvimento regional.</li>
+            <li>Ações de extensão e eventos acadêmicos (ex.: SEMAD, Imersão Empreendedora).</li>
+            <li>Oportunidades de integração com a comunidade e projetos.</li>
+          </ul>
+        </div>
+        <aside class="card card-media">
+          <div class="media-placeholder" role="img" aria-label="Ambiente acadêmico do campus"></div>
+          <p class="media-caption">Imersões e projetos conectados à realidade local.</p>
+        </aside>
+      </div>
+    </section>
+
+    <!-- Processo seletivo (linha do tempo) -->
+    <section id="processo" class="section alt">
+      <div class="container">
+        <h2>Como funciona o processo seletivo?</h2>
+        <ol class="timeline" aria-label="Etapas do processo seletivo">
+          <li class="timeline-item">
+            <div class="dot" aria-hidden="true"></div>
+            <p><strong>Inscrições encerradas</strong> no momento.</p>
+          </li>
+          <li class="timeline-item">
+            <div class="dot" aria-hidden="true"></div>
+            <p>Cadastre-se para receber o edital e prazos do <strong>Vestibular 2026</strong> assim que forem publicados.</p>
+          </li>
+        </ol>
+      </div>
+    </section>
+
+    <!-- Depoimentos (Prova social) -->
+    <section id="depoimentos" class="section">
+      <div class="container">
+        <div class="section-head">
+          <span class="micro">Prova social</span>
+          <h2>O que dizem nossos estudantes</h2>
+        </div>
+
+        <div class="testimonials">
+          <!-- Depoimento 1 -->
+          <figure class="testimonial">
+            <div class="avatar">
+              <img src="assets/img/depo1.jpg" alt="Foto da pessoa do depoimento 1" loading="lazy" decoding="async" />
+            </div>
+            <blockquote class="quote">
+              “O curso me ajudou a transformar ideias em projetos reais. A imersão empreendedora fez toda a diferença.”
+            </blockquote>
+            <figcaption class="author">
+              <span class="name">[Nome do(a) Estudante]</span>
+              <span class="role">Estudante de Administração</span>
+            </figcaption>
+          </figure>
+
+          <!-- Depoimento 2 -->
+          <figure class="testimonial">
+            <div class="avatar">
+              <img src="assets/img/depo2.jpg" alt="Foto da pessoa do depoimento 2" loading="lazy" decoding="async" />
+            </div>
+            <blockquote class="quote">
+              “A prática e os projetos de extensão me deram segurança para atuar na região com impacto real.”
+            </blockquote>
+            <figcaption class="author">
+              <span class="name">[Nome do(a) Egresso(a)]</span>
+              <span class="role">Egresso(a)</span>
+            </figcaption>
+          </figure>
+
+          <!-- Depoimento 3 -->
+          <figure class="testimonial">
+            <div class="avatar">
+              <img src="assets/img/depo3.jpg" alt="Foto da pessoa do depoimento 3" loading="lazy" decoding="async" />
+            </div>
+            <blockquote class="quote">
+              “Docentes próximos e infraestrutura de qualidade. Foi essencial para meu desenvolvimento.”
+            </blockquote>
+            <figcaption class="author">
+              <span class="name">[Nome do(a) Estudante]</span>
+              <span class="role">Bolsista de Extensão</span>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <!-- Formulário -->
+    <section id="inscricao" class="section emphasis" aria-labelledby="titulo-form">
+      <div class="container narrow">
+        <h2 id="titulo-form">Cadastre-se para receber novidades do Vestibular 2026</h2>
+
+        <form id="lead-form" novalidate>
+          <!-- Honeypot anti-spam (oculto) -->
+          <div class="hp-field" aria-hidden="true">
+            <label for="website">Não preencha este campo</label>
+            <input type="text" id="website" name="website" tabindex="-1" autocomplete="off" />
+          </div>
+
+          <div class="form-grid">
+            <div class="form-control">
+              <label for="nome">Nome completo</label>
+              <input type="text" id="nome" name="nome" required autocomplete="name" placeholder="Digite seu nome completo" />
+              <small class="error" id="erro-nome" role="alert" aria-live="polite"></small>
+            </div>
+
+            <div class="form-control">
+              <label for="email">E-mail</label>
+              <input type="email" id="email" name="email" required autocomplete="email" placeholder="seuemail@exemplo.com" />
+              <small class="error" id="erro-email" role="alert" aria-live="polite"></small>
+            </div>
+
+            <div class="form-control">
+              <label for="telefone">Telefone/WhatsApp</label>
+              <input type="tel" id="telefone" name="telefone" inputmode="tel" placeholder="(00) 00000-0000" />
+              <small class="hint">Opcional, mas ajuda no contato.</small>
+            </div>
+
+            <div class="form-control">
+              <label for="cidade">Cidade/UF</label>
+              <input type="text" id="cidade" name="cidade" placeholder="Ex.: Paraíso do Tocantins/TO" />
+            </div>
+
+            <div class="form-control">
+              <label for="conclusao">Ano de conclusão do ensino médio</label>
+              <input type="number" id="conclusao" name="conclusao" min="2000" max="2100" step="1" placeholder="Ex.: 2025" />
+            </div>
+          </div>
+
+          <fieldset class="form-fieldset">
+            <legend>Interesses</legend>
+            <label class="check">
+              <input type="checkbox" name="interesses" value="Eventos no campus" />
+              <span>Eventos no campus</span>
+            </label>
+            <label class="check">
+              <input type="checkbox" name="interesses" value="Conteúdos do curso" />
+              <span>Conteúdos do curso</span>
+            </label>
+            <label class="check">
+              <input type="checkbox" name="interesses" value="Aviso de edital 2026" />
+              <span>Aviso de edital 2026</span>
+            </label>
+          </fieldset>
+
+          <label class="check required">
+            <input type="checkbox" id="lgpd" name="lgpd" required />
+            <span>Autorizo o uso dos meus dados para contato sobre o curso e processos seletivos do IFTO.</span>
+          </label>
+          <small class="error" id="erro-lgpd" role="alert" aria-live="polite"></small>
+
+          <!-- UTMs e mensuração -->
+          <input type="hidden" id="utm_source" name="utm_source" />
+          <input type="hidden" id="utm_medium" name="utm_medium" />
+          <input type="hidden" id="utm_campaign" name="utm_campaign" />
+          <input type="hidden" id="utm_content" name="utm_content" />
+          <input type="hidden" id="event_conversao" name="event_conversao" value="lead_submit" />
+
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary" aria-label="Enviar cadastro" data-track="cta_form_submit">Quero receber novidades do Vestibular 2026</button>
+            <p class="form-feedback" id="form-feedback" role="status" aria-live="polite" hidden></p>
+          </div>
+        </form>
+
+        <p class="form-footnote">
+          Ao enviar, você receberá um e-mail de boas-vindas e uma sequência com:
+          “Conheça o curso”, “Vida no campus” e “Próximos passos”.
+        </p>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq" class="section">
+      <div class="container">
+        <h2>Perguntas frequentes (FAQ)</h2>
+
+        <details class="faq-item">
+          <summary><span class="faq-title">O curso é presencial?</span></summary>
+          <div class="faq-body">
+            <p>Sim, com parte da carga em ambiente virtual.</p>
+          </div>
+        </details>
+
+        <details class="faq-item">
+          <summary><span class="faq-title">Quanto tempo dura?</span></summary>
+          <div class="faq-body">
+            <p>Mínimo 8 semestres e máximo 16.</p>
+          </div>
+        </details>
+
+        <details class="faq-item">
+          <summary><span class="faq-title">Tem estágio e TCC?</span></summary>
+          <div class="faq-body">
+            <p>Sim, ambos obrigatórios.</p>
+          </div>
+        </details>
+
+        <details class="faq-item">
+          <summary><span class="faq-title">Quais são as vagas?</span></summary>
+          <div class="faq-body">
+            <p>Previsão de 40 vagas para 2026 (sujeito a editais).</p>
+          </div>
+        </details>
+
+        <details class="faq-item">
+          <summary><span class="faq-title">Quando abrem as inscrições?</span></summary>
+          <div class="faq-body">
+            <p>Divulgaremos por e-mail e redes assim que sair o edital.</p>
+          </div>
+        </details>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container footer-grid">
+      <div>
+        <h3>Administração — IFTO (Campus Paraíso do Tocantins)</h3>
+        <p>Formação presencial com projetos, extensão, estágio e TCC.</p>
+      </div>
+      <div>
+        <h3>Conformidade</h3>
+        <ul class="footer-links">
+          <li><span>Política de privacidade</span></li>
+          <li><span>Canais oficiais do campus</span></li>
+          <li><span>Meios de contato</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="container footer-base">
+      <p>© <span id="ano-atual"></span> IFTO — Campus Paraíso do Tocantins</p>
+    </div>
+  </footer>
+
+  <!-- JS principal (com versão para evitar cache) -->
+  <script src="script.js?v=1.0.2" defer></script>
+</body>
+</html>
