--- a/index.html
+++ b/index.html
@@ -337,25 +337,29 @@
   </main>
 
   <footer class="site-footer" role="contentinfo">
-    <div class="container footer-grid">
-      <div>
-        <h3>Administração — IFTO (Campus Paraíso do Tocantins)</h3>
-        <p>Formação presencial com projetos, extensão, estágio e TCC.</p>
+  <div class="container footer-grid">
+    <div>
+      <!-- LOGO Black no rodapé, em badge branco para contraste -->
+      <div class="footer-logo-wrap" aria-label="Logo Impacto Adm">
+        <img src="assets/img/Black.png" alt="Impacto Adm" class="footer-logo" width="140" height="auto" decoding="async" loading="lazy" />
       </div>
-      <div>
-        <h3>Conformidade</h3>
-        <ul class="footer-links">
-          <li><span>Política de privacidade</span></li>
-          <li><span>Canais oficiais do campus</span></li>
-          <li><span>Meios de contato</span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="container footer-base">
-      <p>© <span id="ano-atual"></span> IFTO — Campus Paraíso do Tocantins</p>
-    </div>
-  </footer>
 
+      <h3>Administração — IFTO (Campus Paraíso do Tocantins)</h3>
+      <p>Formação presencial com projetos, extensão, estágio e TCC.</p>
+    </div>
+    <div>
+      <h3>Conformidade</h3>
+      <ul class="footer-links">
+        <li><span>Política de privacidade</span></li>
+        <li><span>Canais oficiais do campus</span></li>
+        <li><span>Meios de contato</span></li>
+      </ul>
+    </div>
+  </div>
+  <div class="container footer-base">
+    <p>© <span id="ano-atual"></span> IFTO — Campus Paraíso do Tocantins</p>
+  </div>
+</footer>
   <!-- JS principal (com versão para evitar cache) -->
   <script src="script.js?v=1.0.2" defer></script>
 </body>
