--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <noscript>
     <style>.js-only { display: none !important; }</style>
   </noscript>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <a class="skip-link" href="#conteudo-principal">Pular para o conteúdo</a>
@@ -387,5 +388,6 @@
 
   <!-- JS principal (com versão para evitar cache) -->
   <script src="script.js?v=1.1.0" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
